--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/nehanakrani/nehanakrani/",
+  "homepage": "https://nehanakrani.github.io/nehanakrani/",
   "name": "nehanakrani.github.io",
   "version": "0.1.0",
   "private": true,
