--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "homepage": "https://nehanakrani.github.io/nehanakrani/",
-  "name": "nehanakrani.github.io",
+  "name": "nehanakrani",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "apollo-boost": "^0.4.4",
     "colorthief": "^2.3.0",
     "gh-pages": "^2.1.1",
@@ -21,7 +21,7 @@
     "predeploy": "npm run build",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "deploy": "gh-pages -d build",
+    "deploy": "master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
