--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-twitter-embed": "3.0.3",
     "serve": "^14.2.1"
   },
+
   "scripts": {
-    "start": "react-scripts start",
+    "heroku-postbuild": "npm run build",
+    "start": "serve -s build",
     "build": "react-scripts build",
+    "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
