--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 
   "scripts": {
     "heroku-postbuild": "npm run build",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
