--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
 
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "deploy": "master -d build",
